--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -22,7 +22,7 @@ Please note, that office reader is not a desktop application, but an application
 || *Group Name* || *Test Name* || *Pass Version 0.6* || *Pass Version 1.0* ||
 || ColumnFormattingProperties || Break before and break after || || ||
 || || columnWidth || || ||
-|| || Optimal table column width || || 
+|| || Optimal table column width || ||  ||
 || ParagraphFormattingProperties || automaticTextIndent || || ||
 || || border || || ||
 || || borderLineWidth || || ||
