--- a/wiki/Testsuite.wiki
+++ b/wiki/Testsuite.wiki
@@ -10,86 +10,86 @@ Please note, that office reader is not a desktop application, but an application
 
 == General ==
 
-|| *Group Name* || *Test Name* || *Pass Version 0.6* || *Pass Version 1.0* ||
-|| Document Structure || Predefined Metadata ||  || o ||
-|| || User defined Metadata || ||  ||
-|| || Multiple Document Contents || x || ||
-|| || SingleDocumentContents || ||  o ||
+|| *Group Name* || *Test Name* || *Pass* ||
+|| Document Structure || Predefined Metadata ||  ||
+|| || User defined Metadata || || 
+|| || Multiple Document Contents || ||
+|| || SingleDocumentContents || ||
 
 
-== Formatting Properties ==
+== Formatting Properties ==ftext
 
-|| *Group Name* || *Test Name* || *Pass Version 0.6* || *Pass Version 1.0* ||
-|| ColumnFormattingProperties || Break before and break after || || ||
-|| || columnWidth || || ||
-|| || Optimal table column width || ||  ||
-|| ParagraphFormattingProperties || automaticTextIndent || || ||
-|| || border || || ||
-|| || borderLineWidth || || ||
-|| || Break before and break after || || ||
-|| || delimiterCharacter || || ||
-|| || Drop caps distance || || ||
-|| || Drop caps length || || ||
-|| || dropCapsLines || || ||
-|| || dropCapsTextStyle || || ||
-|| || Fixed line height || || ||
-|| || Font-independent line spacing || || ||
-|| || justifySingleWord || || ||
-|| || Leader color || || ||
-|| || leaderStyle || || ||
-|| || leaderText || || ||
-|| || leaderTextStyle || || ||
-|| || leaderType || || ||
-|| || leaderWidth || || ||
-|| || Left and right margins || || ||
-|| || Line distance || || ||
-|| || Line number start value || || ||
-|| || Line numbering || || ||
-|| || Margins || || ||
-|| || minimumLineHeight || || ||
-|| || Orphans || || ||
-|| || padding || || ||
-|| || paragraph Background Color || || ||
-|| || paragraphBackgroundImageOpacity || || ||
-|| || Paragraph background image position || || ||
-|| || paragraphBackgroundImageRepetition || || ||
-|| || punctuationWrap || || ||
-|| || Register true || || ||
-|| || shadow || || ||
-|| || Tab Position || || ||
-|| || tabStopDistance || || ||
-|| || Tab type || || ||
-|| || textAlign || || ||
-|| || Text align of last line || || ||
-|| || Text autospace || || ||
-|| || Widows || || ||
-|| || textIndent || || ||
-|| || Top and Bottom Margins || || ||
-|| || Vertical Alignment || || ||
-|| || writingMode || || ||
-|| || keepTogether || || ||
-|| TextFormattingProperties || color || || ||
-|| || country || || ||
-|| || Font character set || || ||
-|| || fontFamily || || ||
-|| || fontFamilyGeneric || || ||
-|| || fontName || || ||
-|| || fontPitch || || ||
-|| || fontRelief || || ||
-|| || fontSize || || ||
-|| || fontStyle || || ||
-|| || fontVariant || || ||
-|| || Font Weight || || ||
-|| || Hidden or conditional text || || ||
-|| || hyphenation || || ||
-|| || hyphenationPushCharCount || || ||
-|| || hyphenationRemainCharCount || || ||
-|| || language || || ||
-|| || letterKerning || || ||
-|| || letterSpacing || || ||
-|| || lineThroughColor || || ||
-|| || lineThroughStyle || || ||
-|| || lineThroughText || || ||
+|| *Group Name* || *Test Name* || *Pass*||
+|| ColumnFormattingProperties || Break before and break after || ||
+|| || columnWidth || ||
+|| || Optimal table column width || ||
+|| ParagraphFormattingProperties || automaticTextIndent || ||
+|| || border || ||
+|| || borderLineWidth || ||
+|| || Break before and break after || ||
+|| || delimiterCharacter || ||
+|| || Drop caps distance || ||
+|| || Drop caps length || ||
+|| || dropCapsLines || ||
+|| || dropCapsTextStyle || ||
+|| || Fixed line height || ||
+|| || Font-independent line spacing || ||
+|| || justifySingleWord || ||
+|| || Leader color || ||
+|| || leaderStyle || ||
+|| || leaderText || ||
+|| || leaderTextStyle || ||
+|| || leaderType || ||
+|| || leaderWidth || ||
+|| || Left and right margins || ||
+|| || Line distance || ||
+|| || Line number start value || ||
+|| || Line numbering || ||
+|| || Margins || ||
+|| || minimumLineHeight || ||
+|| || Orphans || ||
+|| || padding || ||
+|| || paragraph Background Color || ||
+|| || paragraphBackgroundImageOpacity || ||
+|| || Paragraph background image position || ||
+|| || paragraphBackgroundImageRepetition || ||
+|| || punctuationWrap || ||
+|| || Register true || ||
+|| || shadow || ||
+|| || Tab Position || ||
+|| || tabStopDistance || ||
+|| || Tab type || ||
+|| || textAlign || ||
+|| || Text align of last line || ||
+|| || Text autospace || ||
+|| || Widows || ||
+|| || textIndent || ||
+|| || Top and Bottom Margins || ||
+|| || Vertical Alignment || ||
+|| || writingMode || ||
+|| || keepTogether || ||
+|| TextFormattingProperties || color || ||
+|| || country || ||
+|| || Font character set || ||
+|| || fontFamily || ||
+|| || fontFamilyGeneric || ||
+|| || fontName || ||
+|| || fontPitch || ||
+|| || fontRelief || ||
+|| || fontSize || ||
+|| || fontStyle || ||
+|| || fontVariant || ||
+|| || Font Weight || ||
+|| || Hidden or conditional text || ||
+|| || hyphenation || ||
+|| || hyphenationPushCharCount || ||
+|| || hyphenationRemainCharCount || ||
+|| || language || ||
+|| || letterKerning || ||
+|| || letterSpacing || ||
+|| || lineThroughColor || ||
+|| || lineThroughStyle || ||
+|| || lineThroughText || ||
 || || lineThroughTextStyle || || ||
 || || lineThrough Width || || ||
 || || relativeFontSize || || ||
@@ -119,30 +119,30 @@ Please note, that office reader is not a desktop application, but an application
 
 == Text Contents ==
 
-|| *Group Name* || *Test Name* || *Pass Version 0.6* || *Pass Version 1.0* ||
-|| Lists || bulletedList || x || ||
-|| || continueNumbering || x || ||
-|| || embededBulletedList || x || ||
-|| || listHeader || x || ||
-|| || numberedList || x || ||
-|| || startValue || || O ||
-|| Headings || Headings || || ||
-|| Paragraph || Bold and italic text in the middle of a paragraph || || O ||
-|| || BasicContents || || ||
-|| textFormatting || Alignment || x || ||
-|| || fontColors || x || ||
-|| || fontSize || || ||
-|| || Bold and Italic || || ||
+|| *Group Name* || *Test Name* || *Pass* ||
+|| Lists || bulletedList || x ||
+|| || continueNumbering || x ||
+|| || embededBulletedList || x ||
+|| || listHeader || x ||
+|| || numberedList || x ||
+|| || startValue || ||
+|| Headings || Headings || ||
+|| Paragraph || Bold and italic text in the middle of a paragraph ||
+|| || BasicContents || ||
+|| textFormatting || Alignment || x ||
+|| || fontColors || x ||
+|| || fontSize || ||
+|| || Bold and Italic || ||
 
 == Results == 
 
-|| *Section* || *Total* || *Pass Version 0.6* || *Fail* || *%* || 
+|| *Section* || *Total* || *Pass* || *Fail* || *%* || 
 || General || 4 || || || ||    
 || Formatting Properties || 90 || || || || 
 || Text Contents || 13 || || || || 
 
 
-|| *Section* || *Total* || *Pass Version 1.0* || *Fail* || *%* || 
+|| *Section* || *Total* || *Pass* || *Fail* || *%* || 
 || General || 4 || || || ||    
 || Formatting Properties || 90 || || || || 
 || Text Contents || 13 || || || || 
