--- a/wiki/Testsuite.wiki
+++ b/wiki/Testsuite.wiki
@@ -125,14 +125,14 @@ Please note, that office reader is not a desktop application, but an application
 || || embededBulletedList || x ||
 || || listHeader || x ||
 || || numberedList || x ||
-|| || startValue || ||
-|| Headings || Headings || ||
+|| || startValue || x || (basically supported, but only numbers with one digit can be shown on Symbian)
+|| Headings || Headings || x ||
 || Paragraph || Bold and italic text in the middle of a paragraph || ||
-|| || BasicContents || ||
+|| || BasicContents || x ||
 || textFormatting || Alignment || x ||
 || || fontColors || x ||
-|| || fontSize || ||
-|| || Bold and Italic || ||
+|| || fontSize ||x ||
+|| || Bold and Italic || x ||
 
 == Results == 
 
@@ -146,5 +146,9 @@ Please note, that office reader is not a desktop application, but an application
 || General || 4 || || || ||    
 || Formatting Properties || 90 || || || || 
 || Text Contents || 13 || || || || 
+
+
+x = pass
+p = partial pass
 
 TableFormattingProperties, TableCellFormattingProperties, TableRowFormattingProperties, Text Frames, Drawing Content and Presentation content testcases were not checked, as Office Reader does not support this completly currently.
