--- a/wiki/StatusPage.wiki
+++ b/wiki/StatusPage.wiki
@@ -30,8 +30,8 @@ The commercial product Mobile Office will be opensourced in several Milestones a
 ~~Completion:		October 1st, 2008~~
 
 =Milestone 3:  Improvement of code=
-  * test ODF maturity against http://develop.opendocumentfellowship.com/testsuite and/or new Oasis test suite in areas of existing functionality  
-  * fix all known crashes and other major/urgent issues within existing functionality with respect to interoperability with OpenOffice.org 3.0 and one other major ODF implementation
+  * ~~test ODF maturity against http://develop.opendocumentfellowship.com/testsuite and/or new Oasis test suite in areas of existing functionality~~  
+  * ~~fix all known crashes and other major/urgent issues within existing functionality with respect to interoperability with OpenOffice.org 3.0 and one other major ODF implementation~~
   * support for hybrid PDF's 
 
 Completion:		January 1st, 2009
