Edited wiki page through web user interface.

--- a/wiki/Testsuite.wiki
+++ b/wiki/Testsuite.wiki
@@ -134,8 +134,8 @@ Please note, that office reader is not a desktop application, but an application
 == Results == 
 
 || *Section* || *Total* || *Pass* || *Fail* || *%* || 
-|| General || 4 || || || ||    
-|| Formatting Properties || 90 || || || || 
-|| Text Contents || 13 || || || || 
+|| General || 4 || 2 || 2 || 50 ||    
+|| Formatting Properties || 90 || 15 || 75 || 17 || 
+|| Text Contents || 13 || 13 || 0 || 100 || 
 
 ColumnFormattingProperties, TableFormattingProperties, TableCellFormattingProperties, TableRowFormattingProperties, Text Frames, Drawing Content and Presentation content testcases were not checked, as Office Reader does not support this completly currently.
