--- a/wiki/Developer.wiki
+++ b/wiki/Developer.wiki
@@ -14,6 +14,6 @@
 
 = Contributing =
 
-If you would like to submit patches, please create a new ticket and attach the patch, please use diff -upN to create it. For inclution of the patch, a [copyright agreement] must be signed first.
+If you would like to submit patches, please create a new ticket and attach the patch, please use diff -upN to create it. For including the patch, a [ContributorAgreement Contributor Agreement] must be signed first.
 
 After several patches, read/write svn rights will be granted for direct access.
